# Predator-RF

./: .gitattributes  .gitignore  .replit  CMakeLists.txt  Dockerfile.backend  build_linux.sh  docker-compose.yml  index.html  preview.html  readme.md  replit.md  sdrpp.desktop  server.py
.agents/: agent_assets_metadata.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
android/: build.gradle  local.properties.win.bak
android/app/: build.gradle
android/sample/: AndroidManifest.snippet.xml  CMakeLists.txt  build.gradle.kts  local.properties.example
attached_assets/: Pasted--CXX1429-error-when-building-with-cmake-using-C-Users-c_1777414829332.txt  Pasted--DELIVERY-SUMMARY-ARCHITECTURE-CODE-PLAN-I-ve-converted_1777770919268.txt  Pasted--Task-app-buildCMakeDebug-arm64-v8a-airspy-source-airsp_1777596219998.txt  Pasted--Task-app-buildCMakeDebug-arm64-v8a-airspy-source-airsp_1777596487320.txt  Pasted--Task-app-buildCMakeDebug-arm64-v8a-airspy-source-airsp_1777596634990.txt  Pasted--Task-app-buildCMakeDebug-arm64-v8a-airspy-source-airsp_1777597461510.txt  Pasted--Task-app-buildCMakeDebug-arm64-v8a-airspy-source-airsp_1777783650755.txt  Pasted--Task-app-buildCMakeDebug-arm64-v8a-airspy-source-airsp_1777783784146.txt  Pasted--Task-app-buildCMakeDebug-arm64-v8a-airspy-source-airsp_1777784716182.txt  Pasted--Task-app-buildCMakeDebug-arm64-v8a-airspy-source-airsp_1777794713027.txt  Pasted--Task-prepareKotlinBuildScriptModel-UP-TO-DATE-C-C-CMak_1777409071882.txt  Pasted--beginning-of-system-2026-05-10-09-31-10-141-1850-4275-_1778453563926.txt  Pasted--xml-version-1-0-encoding-utf-8-manifest-xmlns-android-_1778443306721.txt  Pasted-2026-05-10-08-19-53-729-29600-30083-threaded-app-org-sd_1778440788449.txt  Pasted-2026-05-10-08-30-47-661-31525-31549-threaded-app-org-sd_1778441437177.txt  Pasted-2026-05-10-08-39-52-646-2114-2795-threaded-app-org-sdrp_1778442000659.txt  Pasted-2026-05-10-08-48-02-507-5922-5954-threaded-app-org-sdrp_1778442477609.txt  Pasted-C-Users-cjake-AppData-Local-Android-Sdk-ndk-23-2-856831_1777415630944.txt  Pasted-C-Users-cjake-AppData-Local-Android-Sdk-ndk-23-2-856831_1777415991561.txt  Pasted-Executing-tasks-app-assembleDebug-app-assembleDebugUnit_1778606177575.txt  Pasted-FAILED-Execution-failed-for-task-app-buildCMakeDebug-ar_1777784575706.txt  Pasted-Got-the-vision-Before-I-scaffold-anything-let-me-show-y_1777461650454.txt  predator_sdr_hardware_aware_architecture_1777770928538.md
backend/: __init__.py  android_service.py  config.py  main.py  requirements.txt
backend/api/: server.py
backend/api/middleware/: __init__.py  auth.py
backend/api/routes/: android_pull.py  approvals.py  assessments.py  cot_export.py  events.py  health.py  missions.py  nodes.py  overrides.py  preflight.py  rns.py  tracks.py
backend/coc/: __init__.py  aggregator.py
backend/coordination/: __init__.py  auto_tasker.py  custody_election.py  kujhad_client.py  kujhad_rns_client.py  mode_selector.py  sweep_coordinator.py
backend/fusion/: __init__.py  confidence_engine.py  cross_station_dedup.py  stationarity_gate.py  tdoa_coordinator.py  track_associator.py  track_manager.py
backend/intelligence/: __init__.py  anomaly_detector.py  decision_engine.py  rf_baseline.py
backend/models/: __init__.py  emitter_track.py  rf_event.py  sdr_backend.py  sensor_node.py
backend/observability/: __init__.py  logging.py  metrics.py
backend/operator/: __init__.py  approvals.py  missions.py  overrides.py
backend/output/: __init__.py  cot_emitter.py
backend/persistence/: __init__.py  store.py
backend/rns/: README.md  __init__.py  __main__.py  bridge.py  cmd.py  cmd_handler.py  daemon.py  envelope.py  requirements.txt  schema.py  token.py
backend/sensor/: __init__.py  dsp_engine.py  modes.py  node_manager.py
backend/tests/: test_android_pull.py  test_approvals.py  test_auth_middleware.py  test_auto_tasker.py  test_auto_tasker_concurrency.py  test_auto_tasker_global_budget.py  test_coc_aggregator.py  test_coc_provenance.py  test_cot.py  test_custody_election.py  test_dedup_coc.py  test_dedup_upstream_propagation.py  test_dsp_smoke.py  test_error_ellipse.py  test_gps_age.py  test_kujhad_loopback.py  test_kujhad_wire.py  test_metrics_and_logging.py  test_mission_lifecycle.py  test_multi_sdr.py  test_overrides.py  test_persistence.py  test_preflight.py  test_rns_bridge_advanced.py  test_rns_cmd.py  test_rns_cot_bridge.py  test_rns_daemon_api.py  test_rns_daemon_link.py  test_rns_daemon_socket.py  test_rns_envelope.py  test_rns_schema.py  test_rns_token.py  test_rns_token_crypto.py  test_shutdown_drain.py  test_stationarity_gate.py  test_store_tier4.py  test_sweep_coordinator.py  test_tdoa_inclusive.py  test_tdoa_wire.py
core/: CMakeLists.txt
core/backends/glfw/: backend.cpp
core/libcorrect/: CMakeLists.txt
core/src/: backend.h  core.cpp
decoder_modules/dsdfme_decoder/: CMakeLists.txt
decoder_modules/dsdfme_decoder/src/: main.cpp  predator_dsd_bridge.h
decoder_modules/m17_decoder/: CMakeLists.txt
decoder_modules/rtl433_decoder/: CMakeLists.txt
deploy/: backup_mission.sh  install_rpi.sh  predator-rf.env.example  predator-rf.service  predator-rns.service  preflight.py  rns-setup.sh
docs/: 1_conops.md  ANDROID_INTEGRATION.md  ATAK_COT_FORMAT.md  MISSION_READY_CHECKLIST.md  OPERATOR_GUIDE.md  OPERATOR_RUNBOOK.md  SIDELOAD_README.md  android_build.md  android_gotchas.md  custody_election.md  predator_hold.md  rf_predator_alignment.md  rns_commanding.md  rns_field_log.md  rns_parity.md  stationarity_gate.md  tdoa_controller.md
scripts/: build_operator_guide_pdf.py  post-merge.sh  test_custody_parity.py
source_modules/airspy_source/: CMakeLists.txt
source_modules/airspyhf_source/: CMakeLists.txt
source_modules/hackrf_source/: CMakeLists.txt
source_modules/plutosdr_source/: CMakeLists.txt
source_modules/rtl_sdr_source/: CMakeLists.txt
tests/: custody_election_test.cpp  fleet_tdoa_aggregator_test.cpp  hold_decoder_binder_test.cpp  hold_manager_test.cpp  stationarity_gate_test.cpp  tdoa_coordinator_test.cpp
tests/fixtures/: custody_scenarios.json
(+103 files in other folders)
